--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -9,7 +9,8 @@
 }
 
 .nav-img {
-  height: 60%;
+  height: 40px;
+  width: 40px;
    fill: white;
 }
 
