--- a/scss/components/_settings.scss
+++ b/scss/components/_settings.scss
@@ -129,5 +129,5 @@ button {
 }
 
 .checkbox1, .checkbox2 {
-  max-width: 360px;
+  max-width: 315px;
 }
